# ComfyUI-VisualModelMerge

./: README.md  __init__.py  pyproject.toml
example/: VisualModelMergeSDXL.json  VisualModelMergeSDXL_example.json
js/: visual_model_merge.js
